--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "Untitled Vaccine Intuitive theories paper"
+title: "Modeling and leveraging intuitive theories to improve vaccine attitudes"
+author: "Derek Powell, Kara Weisman, and Ellen M. Markman"
 output: pdf_document
 bibliography: "../supplement/references.bib"
 csl: "../supplement/pnas.csl"
@@ -16,7 +17,7 @@ results <- readRDS("../local/paper-results.rds")
 
 ## Abstract
 
-Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken, such as when they contain misconceptions about vaccine safety that discourage vaccination. We argue that addressing misconceptions requires awareness of the broader conceptual context in which they are embedded. Here, we examine the role of intuitive theories in misconceptions and belief revision by focusing on vaccine hesitancy as a case study. First, we developed a cognitive model of the intuitive theory surrounding vaccination decisions by identifying a set of relevant beliefs, surveying a large sample of U.S. adults, and applying Bayesian network structure learning algorithms to their responses (Study 1).Then, we applied this model to understand belief revision within this larger conceptual system. We found that our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and Covid-19.
+Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken, such as when they contain misconceptions about vaccine safety that discourage vaccination. We argue that addressing misconceptions requires awareness of the broader conceptual context in which they are embedded. Here, we examine the role of intuitive theories in misconceptions and belief revision by focusing on vaccine hesitancy as a case study. First, we developed a cognitive model of the intuitive theory surrounding vaccination decisions by identifying a set of relevant beliefs, surveying a large sample of U.S. adults, and applying Bayesian network structure learning algorithms to their responses (Study 1). Then, we applied this model to understand belief revision within this larger conceptual system. We found that our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and Covid-19.
 
 ## Significance Statement
 
