--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -17,17 +17,17 @@ results <- readRDS("../local/paper-results.rds")
 
 ## Abstract
 
-Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken, such as when they contain misconceptions about vaccine safety that discourage vaccination. We argue that addressing misconceptions requires awareness of the broader conceptual context in which they are embedded. Here, we examine the role of intuitive theories in misconceptions and belief revision by focusing on vaccine hesitancy as a case study. First, we developed a cognitive model of the intuitive theory surrounding vaccination decisions by identifying a set of relevant beliefs, surveying a large sample of U.S. adults, and applying Bayesian network structure learning algorithms to their responses (Study 1). Then, we applied this model to understand belief revision within this larger conceptual system. We found that our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and Covid-19.
+Much of the richness of human thought is supported by people’s intuitive theories---explanatory mental frameworks that capture the perceived causal and relational structure of the world. But serious consequences can arise when these theories are mistaken. In this paper, we take up an important example of the consequences of faulty intuitive theories: when misconceptions about vaccine safety discourage vaccination. We argue that addressing misconceptions like these requires awareness of the broader conceptual context in which they are embedded. We present a cognitive model of the intuitive theory surrounding vaccination decisions, which we developed by identifying a set of relevant beliefs, surveying a large sample of U.S. adults, and applying Bayesian network structure learning algorithms to their responses (Study 1). We then apply this model to understand belief revision within this larger conceptual system. We found that our model helped to explain belief revision following an established educational intervention (Study 2), provided insight that supported our formulation of a novel educational intervention that successfully increased vaccination intentions (Studies 3a, 3b), and also helped to explain how people’s beliefs changed following real-world events (Study 4). Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and of discovering and formalizing intuitive theories via computational models. Moreover, it lays the foundation for theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
 
 ## Significance Statement
 
-When people decide whether to vaccinate their children and themselves against dangerous diseases like measles and Covid-19, their decisions are affected by a network of interrelated beliefs about specific diseases, vaccine safety and efficacy, the immune system, the medical system, and health and nature more generally. By creating a computational model of the intuitive theory connecting these different beliefs, we were able to make accurate predictions about how these beliefs are revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events. This approach provides the foundation for richer understandings of intuitive theories more broadly and sheds new light on long-standing theoretical questions about belief revision. 
+When people decide whether to vaccinate their children and themselves against dangerous diseases like measles and COVID-19, their decisions are affected by a network of interrelated beliefs about specific diseases, vaccine safety and efficacy, the immune system, the medical system, and health and nature more generally. By creating a computational model of the intuitive theory connecting these different beliefs, we were able to make accurate predictions about how these beliefs are revised in light of educational interventions, design an effective new intervention encouraging vaccination, and understand how these beliefs were affected by real-world events. This approach provides the foundation for richer understandings of intuitive theories more broadly and sheds new light on long-standing theoretical questions about belief revision. 
 
 \newpage
 
-One remarkable feature of human psychology is our ability to form rich mental representations of what is true, how things work, and how best to navigate the world around us. Much of this type of thinking can be understood as deriving from people’s *intuitive theories*---explanatory frameworks, analogous to scientific theories, that capture the causal and logical structure of the world within a domain. From early in life, people are driven to seek out such causal explanations and to use their mental representations of these causal systems to explain, predict, and intervene in the world; and to make sense of new information and experiences [see @carey2009; @gelman.legare2011; @gerstenberg.etal2021; @gopnik.wellman1994; @keil1994; @murphy.medin1985; @wellman.gelman1992 for influential treatments of this topic].  Intuitive theories inform reasoning in a wide variety of domains, from reasoning about physical systems [e.g., @baillargeon2004; @battaglia.etal2013; @spelke1994a; @ullman.etal2017], to reasoning about biological processes [e.g., @carey1985; @carey2009; @medin.atran1999] and about the contents of other people’s minds [e.g., @gopnik.wellman1994; @wellman2015; @baker.etal2017].
+One remarkable feature of human psychology is our ability to form rich mental representations of what is true, how things work, and how best to navigate the world around us. Much of this type of thinking can be understood as deriving from people’s *intuitive theories*---explanatory frameworks, analogous to scientific theories, that capture the causal and logical structure of the world within a domain. From early in life, people are driven to seek out such causal explanations and to use their mental representations of these causal systems to explain, predict, and intervene in the world [see @carey2009; @gelman.legare2011; @gerstenberg.etal2021; @gopnik.wellman1994; @keil1994; @murphy.medin1985; @wellman.gelman1992 for influential treatments of this topic].  Intuitive theories inform reasoning in a wide variety of domains, from reasoning about physical systems [e.g., @baillargeon2004; @battaglia.etal2013; @spelke1994a; @ullman.etal2017], biological processes [e.g., @carey1985; @carey2009; @medin.atran1999] andthe contents of other people’s minds [e.g., @gopnik.wellman1994; @wellman2015; @baker.etal2017].
 
-Because intuitive theories are powerful tools for making sense of the world, when these theories are mistaken there can be serious consequences. In this paper, we focus on a timely example: misconceptions about vaccine safety. 
+Because intuitive theories are powerful tools for making sense of the world, when these theories are mistaken there can be serious consequences. In this paper, we focus on an important and timely example: misconceptions about vaccine safety. 
 
 Even before the coronavirus pandemic, misconceptions about vaccine safety drove public health crises around the world. Undervaccination resulted in outbreaks of measles affecting over 1000 children across the United States in 2019, and over 80,000 children across Europe in 2018 [@thornton2019]. Misconceptions about childhood vaccination---particularly the fraudulent claim that vaccines cause autism or other dangerous side-effects---have proved remarkably difficult to correct [e.g., @betsch.sachse2013; @horne.etal2015]. Sadly, only a handful of educational interventions have been found to improve vaccine attitudes [e.g., @horne.etal2015; @vannice.etal2011; @wallace.etal2006; @dube.etal2015]. This is especially  sobering in the context of the coronavirus pandemic: reluctance to be vaccinated against COVID-19 threatens our ability to end a pandemic that has already claimed millions of lives around the world.
 
@@ -37,7 +37,7 @@ Consider some of the beliefs people who are skeptical of childhood vaccination e
 
 The way in which evidence affects any particular belief is unavoidably shaped by other interrelated beliefs. Duhem [-@duhem1954] and Quine [-@quine1951] famously argued that scientific theories necessarily incorporate *auxiliary hypotheses* that influence how observations are interpreted: When an observation is inconsistent with a hypothesis under certain auxiliary assumptions, a scientist cannot necessarily know whether to revise the hypothesis or the auxiliary assumptions. Similarly, we argue that intuitive theories incorporate auxiliary beliefs that affect how other beliefs are revised in light of evidence [also see @gershman2019]. 
 
-Here we present a line of theoretical and empirical work that seeks to understand misconceptions and belief revision in the context of people’s intuitive theories. We focus on reducing hesitancy toward childhood vaccination by identifying intuitive theories surrounding these vaccination decisions. Through this case study we hope to shed light on why such misconceptions persist and how  interventions might address misconceptions more effectively across domains. 
+Here we present a line of theoretical and empirical work that seeks to understand misconceptions and belief revision in the context of people’s intuitive theories. We focus on reducing hesitancy toward childhood vaccination by identifying intuitive theories surrounding these vaccination decisions. Through this case study we hope to shed light on why such misconceptions persist and how interventions might address misconceptions more effectively across domains. 
 
 We argue that correcting misconceptions requires presenting evidence in a way that is sensitive to and persuasive within the broader conceptual context in which those misconceptions reside [see @gershman2019; @weisman.markman2017]. Understanding the revision of any one specific belief (e.g., a misconception like *vaccines are dangerous*) demands a holistic understanding of the wider set of interrelated beliefs that make up people's intuitive theories.
 
@@ -65,7 +65,7 @@ Here, we used Bayesian network structure learning algorithms to construct a mode
 
 # Current studies
 
-In Study 1, we used Bayesian network structure learning algorithms to develop a cognitive model of the relationships among 14 beliefs related to vaccine hesitancy in a large sample of people. In Study 2, we replicated the success of an existing intervention emphasizing the dangers of childhood diseases [@horne.etal2015] and used our model to provide a more detailed understanding of *how and why* this intervention increases vaccine intentions and its effects on related beliefs. In Study 3a and 3b, we drew inspiration from our model to create and validate the success of  a novel intervention aimed at debunking concerns about toxic additives. Finally, in Study 4 we tested whether people's beliefs changed coherently following relevant real-world events, by examining beliefs before and after serious outbreaks of measles in the United States in early 2019. Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and the utility of discovering and formalizing intuitive theories via computational models. And, it lays the foundation for empirically-validated, theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and Covid-19.
+In Study 1, we used Bayesian network structure learning algorithms to develop a cognitive model of the relationships among 14 beliefs related to vaccine hesitancy in a large sample of people. In Study 2, we replicated the success of an existing intervention emphasizing the dangers of childhood diseases [@horne.etal2015] and used our model to provide a more detailed understanding of *how and why* this intervention increases vaccine intentions and its effects on related beliefs. In Study 3a and 3b, we drew inspiration from our model to create and validate the success of  a novel intervention aimed at debunking concerns about toxic additives. Finally, in Study 4 we tested whether people's beliefs changed coherently following relevant real-world events, by examining beliefs before and after serious outbreaks of measles in the United States in early 2019. Taken together, this work illustrates the promise of understanding belief revision in terms of intuitive theories and the utility of discovering and formalizing intuitive theories via computational models. And, it lays the foundation for empirically-validated, theory-based educational interventions that could encourage people to vaccinate their children and themselves against dangerous diseases like measles and COVID-19.
 
 ## Results
 
@@ -79,7 +79,7 @@ We developed psychometrically robust scales to measure these beliefs, then admin
 
 #### Structure learning 
 
-We used these intercorrelations to build a cognitive model of the relations among these beliefs using Bayesian network structure learning techniques, using an 80% training split of the data (*n* = 904). Based on the observed associations among participants' beliefs about each of theses issues, we sought to infer how these states of affairs (e.g., that vaccines are dangerous, that diseases are severe) are connected in people's intuitive theories--how people understand these states of affairs to cause, imply, or otherwise influence one another. 
+We used these intercorrelations to build a cognitive model of the relations among these beliefs using Bayesian network structure learning techniques, using an 80% training split of the data (*n* = 904). Based on the observed associations among participants' beliefs about each of theses issues, we sought to infer how these states of affairs (e.g., that vaccines are dangerous, that diseases are severe) are connected in people's intuitive theories---how people understand these states of affairs to cause, imply, or otherwise influence one another. 
 
 We assumed  that the intuitive theory is a generative model, so that these influence relations (“edges”) should flow from causes or other “generating” states of affairs toward effects. For instance, we stipulated that *vaccine intentions* would be a “child node,” with edges only flowing inwards and not outwards (since one’s intention to vaccinate cannot “generate” the facts about vaccinations safety, effectiveness, etc). These constraints and their consequences are considered in more detail in Methods.
 
@@ -112,7 +112,7 @@ What does this model reveal about the intuitive theory underlying vaccination de
 
 The three nodes with direct connections to *vaccine intentions* are beliefs about *vaccine effectiveness*, *vaccine danger*, and the severity of childhood diseases (*disease severity*) ---concrete beliefs that are, at face value, especially closely related to vaccination decisions.  This gives us confidence that the model is capturing important relationships. 
 
-Other parts of the model shed new light on the role of lay theories in vaccination decisions. For example, *naturalism* ---the general view that natural things are better than artificial things ---appears to be strongly related to *medical skepticism* and *parental expertise*; all three of these abstract beliefs are related to concrete beliefs that, in turn, feed into participants’ vaccination intentions. 
+Other parts of the model shed new light on the role of lay theories in vaccination decisions. For example, *naturalism* ---the general view that natural things are better than artificial things ---appears to be strongly related to *medical skepticism* and *parental expertise*; and all three of these abstract beliefs are related to concrete beliefs that, in turn, feed into participants’ vaccination intentions. 
 
 This model structure also helps explain some initially surprising findings. For example, we originally speculated that dispelling misconceptions about the capacity of the infant immune system could promote positive attitudes toward vaccination. We were disappointed to observe the weak first-order correlation between this belief and *vaccine intentions* in our behavioral data (r = -.09 in our training split). The model sheds light on this surprising (lack of) relationship: Although the belief that the infant immune system is limited in capacity is positively related to the belief that vaccines strain the immune system---discouraging vaccination, as we had assumed---it also seems to promote the belief that childhood diseases have severe consequences for young children (*disease severity*), which might, in turn, encourage vaccination. These countervailing forces---which, on average, seem to have cancelled each other out in this sample---dissuaded us from our plan to develop an intervention aimed at dispelling misconceptions about limited capacity in order to encourage childhood vaccination.
 
@@ -145,9 +145,9 @@ One advantage of having developed a formal, computational representation of a ne
 knitr::include_graphics("../local/pred_change_plt.png")
 ```
 
-We developed a novel educational intervention that addresses fears about toxic additives in vaccines. This Vaccine Ingredients intervention explained the common components of vaccines, emphasized the minute quantities of all vaccine ingredients, and explained the roles that various vaccine additives play in ensuring the stability and safety of vaccines, such as antibiotics, adjuvants, and stabilizers. We gave special attention to defusing concerns about the use of formaldehyde in vaccines because our assessment of anti-vaccination websites suggested that this was a particular concern for many vaccine skeptics. The intervention acknowledged that some vaccines contain trace amounts of formaldehyde, but also pointed out that formaldehyde is a naturally-occurring metabolic byproduct in all living things and that it is already present in children’s bodies (and even in foods like pears) in far larger quantities than contained in any vaccine. The full intervention text can be found in SI. 
+We developed a novel educational intervention that addresses fears about toxic additives in vaccines. This "vaccine ingredients" intervention explained the common components of vaccines, emphasized the minute quantities of all vaccine ingredients, and explained the roles that various vaccine additives play in ensuring the stability and safety of vaccines, such as antibiotics, adjuvants, and stabilizers. We gave special attention to defusing concerns about the use of formaldehyde in vaccines because our assessment of anti-vaccination websites suggested that this was a particular concern for many vaccine skeptics. The intervention acknowledged that some vaccines contain trace amounts of formaldehyde, but pointed out that formaldehyde is a metabolic byproduct that occurs naturally in all living things. The intervention highlights that formaldehyde is already present in children’s bodies (and even in foods like pears) in far larger quantities than contained in any vaccine. The full intervention text can be found in SI. 
 
-We conducted two preregistered experiments (3a and 3b) testing the effects of this novel intervention using the same pretest-posttest design as Study 2. Collapsing across these two studies, Figure 5 shows the change in participants’ (*n* = `r results$s3$demo$n_complete`) attitudes across all 14 belief scales from pretest to posttest. Most importantly, the Vaccine Ingredients intervention significantly improved participants’ vaccination intentions compared to the no-intervention control condition. Changes were also evident across many of the 14 beliefs, with the largest changes being a reduction in vaccine toxicity beliefs. 
+We conducted two preregistered experiments (3a and 3b) testing the effects of this novel intervention using the same pretest-posttest design as Study 2. Collapsing across these two studies, Figure 5 shows the change in participants’ (*n* = `r results$s3$demo$n_complete`) attitudes across all 14 belief scales from pretest to posttest. Most importantly, the vaccine ingredients intervention significantly improved participants’ vaccination intentions compared to the no-intervention control condition. Changes were also evident across many of the 14 beliefs, with the largest changes being a reduction in vaccine toxicity beliefs. 
 
 ```{r fig5-s3, fig.align='center', fig.height=4, fig.width=7, fig.cap="Belief changes following the intervention in studies 3a and 3b. Left, mean difference scores from pretest to posttest for the 14 belief scales across experimental conditions. Right, mean observed and model predicted change scores for the disease risk intervention condition. In both plots, changes were calculated after combining data from both studies and transforming responses to lie between 0 and 1 and error bars represent 95\\% confidence intervals."}
 knitr::include_graphics("../local/s3_plt.png")
